src/objects/Zephr_User__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce Contact associated with the Zephr User</description>
        <inlineHelpText>Salesforce Contact associated with the Zephr User</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zephr Users</relationshipLabel>
        <relationshipName>Zephr_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>We create this so that we can use it to see if there is already a synced Zephr User by email address</description>
        <formula>IF(NOT(ISBLANK( Contact__c )), Contact__r.Email ,
IF(NOT(ISBLANK( Lead__c )), Lead__r.Email ,
&apos;&apos;))</formula>
        <inlineHelpText>Displays the email address of the Lead / Contact</inlineHelpText>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce Lead associated with the Zephr User</description>
        <inlineHelpText>Salesforce Lead associated with the Zephr User</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zephr Users</relationshipLabel>
        <relationshipName>Zephr_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/users/&apos;+ Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_City__c</fullName>
        <label>Zephr City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Company_Name__c</fullName>
        <label>Zephr Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Company_Type__c</fullName>
        <label>Zephr Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zephr Company</label>
        <referenceTo>Zephr_Company__c</referenceTo>
        <relationshipLabel>Zephr Users</relationshipLabel>
        <relationshipName>Zephr_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_Confirm_Contact_Pref__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Confirm Contact Pref</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Contact_Preference_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Contact Preference Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Contact_Preference_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Contact Preference Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Contact_Preference_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Contact Preference Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Country__c</fullName>
        <label>Zephr Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Email Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Email__c</fullName>
        <label>Zephr Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_First_Name__c</fullName>
        <label>Zephr First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique zephr id</description>
        <externalId>true</externalId>
        <label>Zephr Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Job_Title__c</fullName>
        <label>Zephr Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Last_Name__c</fullName>
        <label>Zephr Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Seniority__c</fullName>
        <label>Zephr Seniority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Telephone_Number__c</fullName>
        <label>Zephr Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Tenant__c</fullName>
        <description>Zephr tenant this user is attached to</description>
        <inlineHelpText>Zephr tenant this user is attached to</inlineHelpText>
        <label>Zephr Tenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Tenant</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zephr Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Tracking_Id__c</fullName>
        <externalId>true</externalId>
        <label>Zephr Tracking Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_User_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zephr User 18 ID</label>
        <type>Text</type>
    </fields>
    <label>Zephr User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_Address__c</columns>
        <columns>Zephr_Integration_Message__c</columns>
        <columns>Zephr_Integration_Status__c</columns>
        <columns>Zephr_Tenant__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Without_Lead_Contact</fullName>
        <columns>NAME</columns>
        <columns>Zephr_Tenant__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Zephr_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lead__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Zephr_Email__c</field>
            <operation>notContain</operation>
            <value>@autotests.com</value>
        </filters>
        <label>Without Lead&amp;Contact</label>
    </listViews>
    <nameField>
        <displayFormat>ZU-{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zephr Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Contact_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>!$Permission.Change_Contact_on_Zephr_Sub_User &amp;&amp;
((PRIORVALUE(Contact__c) != null) &amp;&amp; (PRIORVALUE(Contact__c) != Contact__c))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact value can&apos;t be changed.</errorMessage>
    </validationRules>
</CustomObject>